--- a/public/css/discussions.css
+++ b/public/css/discussions.css
@@ -1,188 +1,78 @@
 body {
-    margin: 0;
+    background-color: #15202b;
+    height: 100vh;
+
     box-sizing: border-box;
-    background-color: rgb(51, 51, 51);
-
+    margin: 0;
+    padding: 0;
+    font-family: 'Merriweather', serif;
 }
 
-.divider {
-    background-color: rgb(189, 189, 189);
-}
-
-.box {
-    margin-bottom: 20px;
-}
-
-.card {
-    margin-bottom: 20px;
-}
-
-.card-footer {
-    display: flex;
-    justify-content: space-between;
-}
-
-.card-footer-item {
-    background-color: #007BFF;
-    font-size: 1.1rem;
-
-    color: #fff;
-    padding: 5px 10px;
-
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.card-footer-item:hover {
-    background-color: #0056b3;
-
-}
-
-#delete-form {
-    background-color: #dc3545;
-    font-size: 1.1rem;
-
-    padding: 5px 10px;
-
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-#delete-form:hover {
-    background-color: #bd2130;
-
-}
-
-#delete-btn {
-    font-size: 1.1rem;
-
-    color: #fff;
-    text-decoration: none;
-}
-
-.title {
-    margin-bottom: 0;
-}
-
-.subtitle {
-    font-size: 1.5rem;
-    color: #000;
-}
-
-.tag {
-    float: right;
-}
-
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 2rem;
-    margin-top: 2rem;
-}
-
-.section-title {
-    margin-bottom: 1rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-top: 1rem;
-}
-
-.form-group {
-    margin-bottom: 1rem;
-}
-
-.create-thread-form {
-    background-color: #f5f5f5;
-    padding: 1rem;
-    border-radius: 6px;
-    margin-bottom: 2rem;
-}
-
-.button {
-    background-color: #3498db;
-    color: white;
-}
-
-.discussion-list {
-    margin-top: 1rem;
-}
-
-.discussion {
-    background-color: #ffffff;
-    padding: 1rem;
-    border-radius: 6px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 2rem;
-}
-
-.discussion-title {
-    margin-bottom: 0.5rem;
-    font-size: 1.6rem;
-    border-bottom: 1px solid black;
-}
-
-.discussion-creator {
-    color: #4a4a4a;
-    margin-bottom: 1rem;
-    font-size: 0.7rem;
-    float: right;
-    font-style: italic;
-    margin-top: 0.6rem;
+.created-by {
+    font-size: 0.6rem;
 }
 
 .comment-count {
-    color: #4a4a4a;
-    font-size: 0.7rem;
-    margin-right: 20px;
+    float: right;
+    font-size: 0.6rem;
 }
 
-.view-discussion-link {
-    display: inline-block;
-    margin-top: 0.5rem;
-    font-weight: bold;
-    text-decoration: none;
-    color: #3498db;
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
-@media (max-width: 768px) {
-    .container {
-        padding: 1em;
-        margin: auto;
-    }
+.title {
+    color: #ffffff;
+}
 
-    .card {
-        box-sizing: border-box;
-        padding: 10px;
-    }
+.subtitle {
+    color: #657786;
+}
 
-    .card-content {
-        font-size: 14px;
-    }
+.box {
+    border: none;
+    border-radius: 7px;
+    padding: 10px 15px;
+    box-shadow: none;
+    border-bottom: 1px solid #E1E8ED;
+    background: #FFF;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+}
 
-    .comments .box {
-        margin-bottom: 10px;
-    }
+textarea {
+    border: none;
+    box-shadow: none;
+    resize: none;
+}
 
-    .add-comment-form {
-        padding: 10px;
-    }
+.button.is-link {
+    background: #1DA1F2;
+    color: #FFF;
+    border: none;
+}
 
-    .card-footer-item {
-        font-size: 1rem;
-        /* even smaller font size for mobile */
-        padding: 3px 6px;
-        /* reduced padding for mobile */
-    }
+.button.is-text {
+    color: #1DA1F2;
+    background: none;
+    border: none;
+}
 
-    #delete-form {
-        font-size: 1rem;
-        /* even smaller font size for mobile */
-        padding: 3px 6px;
-        /* reduced padding for mobile */
-    }
+.input {
+    border: none;
+    box-shadow: none;
+}
 
-    #delete-btn {
-        font-size: 1rem;
-        /* even smaller font size for mobile */
-    }
+.discussion-content {
+    margin: 10px 0;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
