--- a/views/discussions/discussion.ejs
+++ b/views/discussions/discussion.ejs
@@ -64,5 +64,8 @@
       </div>
     </form>
     <% } %>
+    <div class="mt-4">
+      <a href="/discussions">Back to Discussions</a>
+    </div>
   </div>
 </div>
