added RVR menu item

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,6 +26,8 @@
               <h3 class="navbar-item">Misc Items</h3>
                 <ul>
                   <li><a href="/discussions" class="navbar-item">Discussion Board</a></li>
+                  <li><a href="/rvr" class="navbar-item">RVR Exercise</a></li>
+
                 <li><a class="navbar-item" href="/weather">Weather Planning</a></li>
                 
                 <li><a class="navbar-item" href="/fuel">Fuel Planning</a></li>
