adding a document repo and also working on the logic in the rvr page

--- a/views/rvr.ejs
+++ b/views/rvr.ejs
@@ -1,5 +1,6 @@
 <div class="main-content">
   <h1>Lower Than Standard Takeoff Minimum Exercise</h1>
+  <H2>!!!!! THIS PAGE IS NOT WORKING!! DO NOT USE FOR STUDY!!!!</H2>
   <button id="generate-button">Generate new values</button>
 
   <div class="data-container">
@@ -31,6 +32,8 @@
     <hr />
     <h4>RUNWAY LIGHTING AVAILABLE</h4>
     <p id="lighting-value"></p>
+    <h4>Day/Night:</h4>
+    <p id="day-night-value"></p>
   </div>
   <p id="result"></p>
 </div>
