--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,6 +25,7 @@
             <div class="navbar-dropdown">
               <h3 class="navbar-item">Misc Items</h3>
                 <ul>
+                  <li><a href="/documents" class="navbar-item">Document Repository</a></li>
                   <li><a href="/discussions" class="navbar-item">Discussion Board</a></li>
                   <li><a href="/rvr" class="navbar-item">RVR Exercise</a></li>
 
