--- a/public/css/documents.css
+++ b/public/css/documents.css
@@ -1,3 +1,17 @@
+html, body {
+    margin: 0;
+    height: 100%;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Merriweather', serif;
+
+    background-color: rgb(51, 51, 51);
+    color: #fff;
+
+
+}
+
+
 .document-link {
     color: #3273dc;
     text-decoration: none;
@@ -12,6 +26,7 @@
 .title {
     margin-top: 2rem;
     margin-bottom: 1.5rem;
+    font-size: 1rem;
 }
 
 .content {
