--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -78,3 +78,13 @@
     background-color: #009EE2;
     transition: 0.2s ease-in-out;
 }
+
+#flashcards-link {
+    background-color: #ffc300;
+    margin: 10px;
+    color: #000;
+    font-size: 1.5em;
+    border: 4px solid #000;
+    border-radius: 20px;
+    text-align: center;
+}
