--- a/views/documents.ejs
+++ b/views/documents.ejs
@@ -1,62 +1,88 @@
-<div class="container">
-  <h1 class="title">Document Repository</h1>
-  <div class="content">
-    <h2 class="subtitle">Uploaded Documents</h2>
-    <ul class="list">
+<div class="container p-5">
+  <div class="card">
+    <header class="card-header">
+      <p class="card-header-title">Document Repository</p>
+    </header>
+    <div class="card-content">
+      <h2 class="subtitle">Uploaded Documents</h2>
       <% documents.forEach(document => { %>
-      <li>
-        <a class="document-link" href="/docs/<%= document.filename %>"
-          ><%= document.name %></a
-        >
-      </li>
-      <% }) %>
-    </ul>
-    <h2 class="subtitle">Upload New Document</h2>
-    <form
-      action="/upload"
-      method="POST"
-      enctype="multipart/form-data"
-      onsubmit="return validateFile()"
-    >
-      <div class="field">
-        <label class="label">Document Name:</label>
-        <div class="control">
-          <input
-            class="input"
-            type="text"
-            name="name"
-            placeholder="Enter document name"
-            required
-          />
-        </div>
-      </div>
-      <div class="field">
-        <label class="label">Select File:</label>
-        <div class="file is-primary has-name">
-          <label class="file-label">
-            <input
-              class="file-input"
-              type="file"
-              name="document"
-              id="document"
-              required
-            />
-            <span class="file-cta">
-              <span class="file-icon">
-                <i class="fas fa-upload"></i>
+      <div class="card m-3">
+        <div class="card-content">
+          <div class="media">
+            <div class="media-left">
+              <span class="icon">
+                <i class="fas fa-file"></i>
               </span>
-              <span class="file-label"> Choose a file... </span>
-            </span>
-            <span class="file-name"> No file chosen </span>
-          </label>
+            </div>
+            <div class="media-content">
+              <a
+                class="title document-link"
+                href="/docs/<%= encodeURIComponent(document.filename) %>"
+              >
+                <%= document.name %>
+              </a>
+            </div>
+            <% if(currentUser.isAdmin) { %>
+            <form action="/delete-document/<%= document._id %>" method="POST">
+              <button class="button is-danger" type="submit">Delete</button>
+            </form>
+            <% } %>
+          </div>
         </div>
       </div>
-      <div class="field">
-        <div class="control">
-          <button class="button is-primary" type="submit">Upload</button>
-        </div>
+      <% }) %>
+      <a id="uploadLink" href="#">Upload New Document</a>
+
+      <hr />
+      <div id="uploadForm" style="display: none">
+        <h2 class="subtitle">Upload New Document</h2>
+        <form
+          action="/upload"
+          method="POST"
+          enctype="multipart/form-data"
+          onsubmit="return validateFile()"
+        >
+          <div class="field">
+            <label class="label">Document Name:</label>
+            <div class="control">
+              <input
+                class="input"
+                type="text"
+                name="name"
+                placeholder="Enter document name"
+                required
+              />
+            </div>
+          </div>
+          <div class="field">
+            <label class="label">Select File:</label>
+            <div class="file is-primary has-name">
+              <label class="file-label">
+                <input
+                  class="file-input"
+                  type="file"
+                  name="document"
+                  id="document"
+                  required
+                />
+                <span class="file-cta">
+                  <span class="file-icon">
+                    <i class="fas fa-upload"></i>
+                  </span>
+                  <span class="file-label"> Choose a file... </span>
+                </span>
+                <span class="file-name"> No file chosen </span>
+              </label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="control">
+              <button class="button is-primary" type="submit">Upload</button>
+            </div>
+          </div>
+        </form>
       </div>
-    </form>
+    </div>
   </div>
 </div>
 
@@ -65,22 +91,43 @@
   const fileLabel = document.querySelector(".file-name");
 
   fileInput.addEventListener("change", (event) => {
-    const fileName = event.target.files[0].name;
+    const file = event.target.files[0];
+    const fileName = file.name;
+    const fileSize = file.size;
+    const fileExtension = fileName
+      .substring(fileName.lastIndexOf("."))
+      .toLowerCase();
+    const allowedExtensions = [
+      ".doc",
+      ".docx",
+      ".pdf",
+      ".jpg",
+      ".jpeg",
+      ".png",
+      ".gif",
+    ];
+
+    if (!allowedExtensions.includes(fileExtension)) {
+      alert(
+        "Invalid file type. Only .doc, .docx, .pdf, and image files are allowed."
+      );
+      return false;
+    }
+
+    if (fileSize > 25000000) {
+      // size limit 5MB
+      alert("The file is too large. Maximum allowed size is 25MB.");
+      return false;
+    }
+
     fileLabel.textContent = fileName;
   });
 
   function validateFile() {
-    const fileName = fileInput.value;
-    const fileExtension = fileName
-      .substring(fileName.lastIndexOf("."))
-      .toLowerCase();
-    const allowedExtensions = [".doc", ".docx", ".pdf"];
-
-    if (!allowedExtensions.includes(fileExtension)) {
-      alert("Invalid file type. Only .doc, .docx, and .pdf files are allowed.");
-      return false;
-    }
-
-    return true;
+    return fileInput.files[0] ? true : false;
   }
+  document.getElementById("uploadLink").addEventListener("click", function (e) {
+    e.preventDefault();
+    document.getElementById("uploadForm").style.display = "block";
+  });
 </script>
