refactoring some of the pages

--- a/public/css/flows.css
+++ b/public/css/flows.css
@@ -25,6 +25,7 @@ html, body {
     justify-content: space-between;
     width: auto;
     margin-left: 20px;
+    margin-bottom: 20px;
 }
 
 #darkModeLabel {
