--- a/public/css/login.css
+++ b/public/css/login.css
@@ -7,14 +7,6 @@ html, body {
     display: flex;
     flex-direction: column;
     background-color: rgb(51, 51, 51);
-
-
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1570710891163-6d3b5c47248b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
-    background-position: 30% center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed; */
-
     color: #fff;
 
 }
@@ -30,13 +22,17 @@ html, body {
 
 .box {
     width: 100%;
-    max-width: 700px;
+    min-width: 350px;
     padding: 15px;
     box-sizing: border-box;
 }
 
 .title {
     text-align: center;
+}
+
+.forgot-password-link {
+    font-size: 0.7em;
 }
 
 .brand {
@@ -46,7 +42,10 @@ html, body {
 
 input[type=text],
 input[type=password] {
-    box-shadow: none;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: rgb(245, 245, 245);
+    gap: 10%;
+    font-size: 1.3em;
 }
 
 .button.is-fullwidth {
@@ -54,6 +53,7 @@ input[type=password] {
     font-weight: bold;
     border-radius: 7px;
     background-color: #009EE2;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .button.is-fullwidth:hover {
