--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 
     <form action="/login" method="post">
       <div class="field">
-        <label for="username" class="label">Username:</label>
+        <label for="username" class="label"></label>
         <div class="control">
           <input
             type="text"
@@ -13,11 +13,12 @@
             required
             class="input"
             autocomplete="off"
+            placeholder="username"
           />
         </div>
       </div>
       <div class="field">
-        <label for="password" class="label">Password:</label>
+        <label for="password" class="label"></label>
         <div class="control">
           <input
             type="password"
@@ -26,7 +27,15 @@
             required
             class="input"
             autocomplete="off"
+            placeholder="password"
           />
+        </div>
+      </div>
+      <div class="field">
+        <div class="control">
+          <a href="/forgot-password" class="forgot-password-link"
+            >Forgot Password?</a
+          >
         </div>
       </div>
       <div class="field">
@@ -37,10 +46,5 @@
         </div>
       </div>
     </form>
-    <div class="field">
-      <div class="control">
-        <a href="/forgot-password">Forgot Password?</a>
-      </div>
-    </div>
   </div>
 </div>
