changed the error page

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,6 +1,6 @@
 <div class="error-wrapper">
   <div class="error-container">
-    <h1>Something went wrong</h1>
+    <h1>Uh oh, something is wrong...</h1>
     <p><%= error.message || 'An unexpected error has occurred.' %></p>
     <div class="button-container">
       <a href="/" id="homepage-btn">Go to Homepage</a>
