--- a/public/css/error.css
+++ b/public/css/error.css
@@ -6,48 +6,35 @@ html, body {
     font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1570710891163-6d3b5c47248b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
-    background-position: 30% center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: #fff;
-    background-attachment: fixed;
+    background-color: grey;
 
 }
 
-
-
 h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+
+p {
+    font-size: 1.2rem;
+    color: #666;
+    margin-bottom: 2rem;
 }
 
 .error-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: calc(100vh - 60px);
-
-    /* Assuming navbar height is 60px */
+    height: 100vh;
+    background-color: rgb(51, 51, 51);
 }
 
 .error-container {
     text-align: center;
     padding: 2rem;
-    border-radius: 6px;
-    box-shadow: 0px 2px 3px rgba(10, 10, 10, 0.1), 0px 0px 0px 1px rgba(10, 10, 10, 0.1);
-    background-color: #f1f1f1;
-    width: 90%;
-}
-
-.error-container h1 {
-    color: #ff3860;
-    margin-bottom: 1rem;
-    font-weight: 700;
-}
-
-p {
-    color: #000;
-    font-size: 2rem;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 #homepage-btn {
@@ -65,7 +52,8 @@ p {
 }
 
 .button-container {
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 768px) {
